--- a/index.html
+++ b/index.html
@@ -28,40 +28,58 @@
 			</nav>
 		</section>
 		<section id="gangen" class="gangen">
-			<picture>
-				<source type="image/jpeg" srcset="images/tidslos-01.jpg"/>
-				<img/>
-			</picture>
+			<figure>
+				<picture>
+					<source type="image/jpeg" srcset="images/tidslos-01.jpg"/>
+					<img/>
+				</picture>
+				<figcaption>1024 Tidløs</figcaption>
+			</figure>
 		</section>
 		<section id="allroom" class="allroom">
-			<picture>
-				<source type="image/gif" srcset="images/morgendis-02.gif"/>
-				<img/>
-			</picture>
+			<figure>
+				<picture>
+					<source type="image/gif" srcset="images/morgendis-02.gif"/>
+					<img/>
+				</picture>
+				<figcaption>9914 Morgendis</figcaption>
+			</figure>
 		</section>
 		<section id="stuen" class="stuen">
-			<picture>
-				<source type="image/jpeg" srcset="images/soft-02.jpg"/>
-				<img/>
-			</picture>
+			<figure>
+				<picture>
+					<source type="image/jpeg" srcset="images/soft-02.jpg"/>
+					<img/>
+				</picture>
+				<figcaption>1276 Soft</figcaption>
+			</figure>
 		</section>
 		<section id="kajs" class="kajs">
-			<picture>
-				<source type="image/jpeg" srcset="images/lovsal-01.jpg"/>
-				<img/>
-			</picture>
+			<figure>
+				<picture>
+					<source type="image/jpeg" srcset="images/lovsal-01.jpg"/>
+					<img/>
+				</picture>
+				<figcaption>8118 Løvsal</figcaption>
+			</figure>
 		</section>
 		<section id="fars" class="fars">
-			<picture>
-				<source type="image/webp" srcset="images/transparentpink-01.webp"/>
-				<img/>
-			</picture>
+			<figure>
+				<picture>
+					<source type="image/webp" srcset="images/transparentpink-01.webp"/>
+					<img/>
+				</picture>
+				<figcaption>20119 Transparent Pink</figcaption>
+			</figure>
 		</section>
 		<section id="lokum" class="lokum">
-			<picture>
-				<source type="image/jpeg" srcset="images/space-01.jpg"/>
-				<img/>
-			</picture>
+			<figure>
+				<picture>
+					<source type="image/jpeg" srcset="images/space-01.jpg"/>
+					<img/>
+				</picture>
+				<figcaption>10678 Space</figcaption>
+			</figure>
 		</section>
 	</body>
 </html>
