--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>Farveplan</title>
+		<meta charset="UTF-8"/>
 		<link rel="stylesheet" href="styles.css"/>
 	</head>
 	<body>
@@ -42,7 +43,7 @@
 					<source type="image/gif" srcset="images/morgendis-02.gif"/>
 					<img/>
 				</picture>
-				<figcaption>9914 Morgendis</figcaption>
+				<figcaption>9915 Morgendis</figcaption>
 			</figure>
 		</section>
 		<section id="stuen" class="stuen">
