--- a/index.html
+++ b/index.html
@@ -6,82 +6,84 @@
 		<link rel="stylesheet" href="styles.css"/>
 	</head>
 	<body>
-		<section id="intro">
-			<nav>
-				<a class="gangen" href="#gangen">
-					<span>Gangen</span>
-				</a>
-				<a class="allroom" href="#allroom">
-					<span>Allroom</span>
-				</a>
-				<a class="stuen" href="#stuen">
-					<span>Stuen</span>
-				</a>
-				<a class="kajs" href="#kajs">
-					<span>Kaj's</span>
-				</a>
-				<a class="fars" href="#fars">
-					<span>Far's</span>
-				</a>
-				<a class="lokum" href="#lokum">
-					<span>Lokum</span>
-				</a>
-			</nav>
-		</section>
-		<section id="gangen" class="gangen">
-			<figure>
-				<picture>
-					<source type="image/jpeg" srcset="images/tidslos-01.jpg"/>
-					<img/>
-				</picture>
-				<figcaption>1024 Tidløs</figcaption>
-			</figure>
-		</section>
-		<section id="allroom" class="allroom">
-			<figure>
-				<picture>
-					<source type="image/gif" srcset="images/morgendis-02.gif"/>
-					<img/>
-				</picture>
-				<figcaption>9915 Morgendis</figcaption>
-			</figure>
-		</section>
-		<section id="stuen" class="stuen">
-			<figure>
-				<picture>
-					<source type="image/jpeg" srcset="images/soft-02.jpg"/>
-					<img/>
-				</picture>
-				<figcaption>1276 Soft</figcaption>
-			</figure>
-		</section>
-		<section id="kajs" class="kajs">
-			<figure>
-				<picture>
-					<source type="image/jpeg" srcset="images/lovsal-01.jpg"/>
-					<img/>
-				</picture>
-				<figcaption>8118 Løvsal</figcaption>
-			</figure>
-		</section>
-		<section id="fars" class="fars">
-			<figure>
-				<picture>
-					<source type="image/webp" srcset="images/transparentpink-01.webp"/>
-					<img/>
-				</picture>
-				<figcaption>20119 Transparent Pink</figcaption>
-			</figure>
-		</section>
-		<section id="lokum" class="lokum">
-			<figure>
-				<picture>
-					<source type="image/jpeg" srcset="images/space-01.jpg"/>
-					<img/>
-				</picture>
-				<figcaption>10678 Space</figcaption>
-			</figure>
-		</section>
+		<main>
+			<section id="intro">
+				<nav>
+					<a class="gangen" href="#gangen">
+						<span>Gangen</span>
+					</a>
+					<a class="allroom" href="#allroom">
+						<span>Allroom</span>
+					</a>
+					<a class="stuen" href="#stuen">
+						<span>Stuen</span>
+					</a>
+					<a class="kajs" href="#kajs">
+						<span>Kaj's</span>
+					</a>
+					<a class="fars" href="#fars">
+						<span>Far's</span>
+					</a>
+					<a class="lokum" href="#lokum">
+						<span>Lokum</span>
+					</a>
+				</nav>
+			</section>
+			<section id="gangen" class="gangen">
+				<figure>
+					<picture>
+						<source type="image/jpeg" srcset="images/tidslos-01.jpg"/>
+						<img/>
+					</picture>
+					<figcaption>1024 Tidløs</figcaption>
+				</figure>
+			</section>
+			<section id="allroom" class="allroom">
+				<figure>
+					<picture>
+						<source type="image/gif" srcset="images/morgendis-02.gif"/>
+						<img/>
+					</picture>
+					<figcaption>9915 Morgendis</figcaption>
+				</figure>
+			</section>
+			<section id="stuen" class="stuen">
+				<figure>
+					<picture>
+						<source type="image/jpeg" srcset="images/soft-02.jpg"/>
+						<img/>
+					</picture>
+					<figcaption>1276 Soft</figcaption>
+				</figure>
+			</section>
+			<section id="kajs" class="kajs">
+				<figure>
+					<picture>
+						<source type="image/jpeg" srcset="images/lovsal-01.jpg"/>
+						<img/>
+					</picture>
+					<figcaption>8118 Løvsal</figcaption>
+				</figure>
+			</section>
+			<section id="fars" class="fars">
+				<figure>
+					<picture>
+						<source type="image/webp" srcset="images/transparentpink-01.webp"/>
+						<img/>
+					</picture>
+					<figcaption>20119 Transparent Pink</figcaption>
+				</figure>
+			</section>
+			<section id="lokum" class="lokum">
+				<figure>
+					<picture>
+						<source type="image/jpeg" srcset="images/space-01.jpg"/>
+						<img/>
+					</picture>
+					<figcaption>10678 Space</figcaption>
+				</figure>
+			</section>
+		</main>
 		<script src="scripts.js"></script>
 	</body>
 </html>
