--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
 			<section id="allroom" class="allroom">
 				<figure>
 					<picture>
-						<source type="image/gif" srcset="images/morgendis-02.gif"/>
+						<source type="image/jpeg" srcset="images/dempet-01.jpg"/>
 						<img/>
 					</picture>
-					<figcaption>9915 Morgendis</figcaption>
+					<figcaption>1027 Dempet</figcaption>
 				</figure>
 			</section>
 			<section id="stuen" class="stuen">
