--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			<section id="gangen" class="gangen">
 				<figure>
 					<picture>
-						<source type="image/jpeg" srcset="images/tidslos-01.jpg"/>
+						<source type="image/jpeg" srcset="images/gangen/tidslos-01.jpg"/>
 						<img/>
 					</picture>
 					<figcaption>1024 Tidløs</figcaption>
@@ -41,7 +41,7 @@
 			<section id="allroom" class="allroom">
 				<figure>
 					<picture>
-						<source type="image/jpeg" srcset="images/dempet-01.jpg"/>
+						<source type="image/jpeg" srcset="images/allroom/dempet-01.jpg"/>
 						<img/>
 					</picture>
 					<figcaption>1027 Dempet</figcaption>
@@ -50,7 +50,7 @@
 			<section id="stuen" class="stuen">
 				<figure>
 					<picture>
-						<source type="image/jpeg" srcset="images/soft-02.jpg"/>
+						<source type="image/jpeg" srcset="images/stuen/soft-02.jpg"/>
 						<img/>
 					</picture>
 					<figcaption>1276 Soft</figcaption>
@@ -59,7 +59,7 @@
 			<section id="kajs" class="kajs">
 				<figure>
 					<picture>
-						<source type="image/jpeg" srcset="images/lovsal-01.jpg"/>
+						<source type="image/jpeg" srcset="images/kajs/lovsal-01.jpg"/>
 						<img/>
 					</picture>
 					<figcaption>8118 Løvsal</figcaption>
@@ -68,7 +68,7 @@
 			<section id="fars" class="fars">
 				<figure>
 					<picture>
-						<source type="image/webp" srcset="images/transparentpink-01.webp"/>
+						<source type="image/webp" srcset="images/fars/transparentpink-01.webp"/>
 						<img/>
 					</picture>
 					<figcaption>20119 Transparent Pink</figcaption>
@@ -77,7 +77,7 @@
 			<section id="lokum" class="lokum">
 				<figure>
 					<picture>
-						<source type="image/jpeg" srcset="images/space-01.jpg"/>
+						<source type="image/jpeg" srcset="images/lokum/space-01.jpg"/>
 						<img/>
 					</picture>
 					<figcaption>10678 Space</figcaption>
