--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 				</nav>
 			</section>
 			<section id="gangen" class="gangen">
-				<figure>
+				<figure class="photo">
 					<picture>
 						<source type="image/jpeg" srcset="images/gangen/tidslos-01.jpg"/>
 						<img/>
@@ -39,7 +39,7 @@
 				</figure>
 			</section>
 			<section id="allroom" class="allroom">
-				<figure>
+				<figure class="photo">
 					<picture>
 						<source type="image/jpeg" srcset="images/allroom/dempet-01.jpg"/>
 						<img/>
@@ -48,7 +48,7 @@
 				</figure>
 			</section>
 			<section id="stuen" class="stuen">
-				<figure>
+				<figure class="photo">
 					<picture>
 						<source type="image/jpeg" srcset="images/stuen/soft-02.jpg"/>
 						<img/>
@@ -57,7 +57,7 @@
 				</figure>
 			</section>
 			<section id="kajs" class="kajs">
-				<figure>
+				<figure class="photo">
 					<picture>
 						<source type="image/jpeg" srcset="images/kajs/lovsal-01.jpg"/>
 						<img/>
@@ -66,7 +66,7 @@
 				</figure>
 			</section>
 			<section id="fars" class="fars">
-				<figure>
+				<figure class="photo">
 					<picture>
 						<source type="image/webp" srcset="images/fars/transparentpink-01.webp"/>
 						<img/>
@@ -75,7 +75,7 @@
 				</figure>
 			</section>
 			<section id="lokum" class="lokum">
-				<figure>
+				<figure class="photo">
 					<picture>
 						<source type="image/jpeg" srcset="images/lokum/space-01.jpg"/>
 						<img/>
