--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<title>Farveplan</title>
 		<meta charset="UTF-8"/>
 		<link rel="stylesheet" href="styles.css"/>
+		<script type="module" src="scripts.js"></script>
 	</head>
 	<body>
 		<main>
@@ -84,6 +85,5 @@
 				</figure>
 			</section>
 		</main>
-		<script src="scripts.js"></script>
 	</body>
 </html>
