--- a/index.html
+++ b/index.html
@@ -69,6 +69,13 @@
 			<section id="fars" class="fars">
 				<figure class="photo">
 					<picture>
+						<source type="image/jpeg" srcset="images/fars/desertpink-01.jpg"/>
+						<img/>
+					</picture>
+					<figcaption>12120 Desert Pink</figcaption>
+				</figure>
+				<figure class="photo" style="display:none">
+					<picture>
 						<source type="image/webp" srcset="images/fars/transparentpink-01.webp"/>
 						<img/>
 					</picture>
