--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
 				</picture>
 				<figure class="photo">
 					<picture>
-						<source type="image/jpeg" srcset="images/allroom/antikgra-02.jpg"/>
+						<source type="image/jpeg" srcset="images/allroom/morgendis-01.jpg"/>
 						<img/>
 					</picture>
-					<figcaption>1973 Antikkgrå</figcaption>
+					<figcaption>9915 Morgendis</figcaption>
 				</figure>
 			</section>
 			<section id="stuen" class="stuen">
