--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html class="alt">
 	<head>
 		<title>Farveplan</title>
 		<meta charset="UTF-8"/>
@@ -43,9 +43,11 @@
 			<section id="allroom" class="allroom">
 				<figure class="photo">
 					<picture>
+						<source type="image/jpeg" srcset="images/allroom/elegant.jpg"/>
+						<source type="image/webp" srcset="images/allroom/sober.webp"/>
 						<source type="image/webp" srcset="images/allroom/idasen.webp"/>
 						<img/>
-					</picture>
+					</picture>	
 					<figcaption>9915 Morgendis</figcaption>
 				</figure>
 			</section>
@@ -61,6 +63,7 @@
 			<section id="kajs" class="kajs">
 				<figure class="photo">
 					<picture>
+						<source type="image/jpeg" srcset="images/kajs/naturalblue.jpg"/>
 						<source type="image/jpeg" srcset="images/kajs/lovsal-01.jpg"/>
 						<img/>
 					</picture>
@@ -86,6 +89,7 @@
 			<section id="lokum" class="lokum">
 				<figure class="photo">
 					<picture>
+						<source type="image/jpeg" srcset="images/lokum/kalk-02.jpg"/>
 						<source type="image/jpeg" srcset="images/lokum/space-01.jpg"/>
 						<img/>
 					</picture>
