--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 			<section id="gangen" class="gangen">
 				<figure class="photo">
 					<picture>
+						<source type="image/jpeg" srcset="images/gangen/letthet-01.jpg"/>
 						<source type="image/jpeg" srcset="images/gangen/tidslos-01.jpg"/>
 						<img/>
 					</picture>
@@ -43,6 +44,7 @@
 			<section id="allroom" class="allroom">
 				<figure class="photo">
 					<picture>
+						<source type="image/png" srcset="images/allroom/nostalgi-01.png"/>
 						<source type="image/jpeg" srcset="images/allroom/elegant.jpg"/>
 						<source type="image/webp" srcset="images/allroom/sober.webp"/>
 						<source type="image/webp" srcset="images/allroom/idasen.webp"/>
