--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="alt">
+<html>
 	<head>
 		<title>Farveplan</title>
 		<meta charset="UTF-8"/>
@@ -35,19 +35,15 @@
 				<figure class="photo">
 					<picture>
 						<source type="image/jpeg" srcset="images/gangen/letthet-01.jpg"/>
-						<source type="image/jpeg" srcset="images/gangen/tidslos-01.jpg"/>
 						<img/>
 					</picture>
-					<figcaption>1024 Tidløs</figcaption>
+					<figcaption>1624 Letthet</figcaption>
 				</figure>
 			</section>
 			<section id="allroom" class="allroom">
 				<figure class="photo">
 					<picture>
 						<source type="image/png" srcset="images/allroom/nostalgi-01.png"/>
-						<source type="image/jpeg" srcset="images/allroom/elegant.jpg"/>
-						<source type="image/webp" srcset="images/allroom/sober.webp"/>
-						<source type="image/webp" srcset="images/allroom/idasen.webp"/>
 						<img/>
 					</picture>	
 					<figcaption>9915 Morgendis</figcaption>
@@ -56,16 +52,23 @@
 			<section id="stuen" class="stuen">
 				<figure class="photo">
 					<picture>
+						<source type="image/jpeg" srcset="images/stuen/silke-01.jpg"/>
 						<source type="image/jpeg" srcset="images/stuen/soft-01.jpg"/>
 						<img/>
 					</picture>
-					<figcaption>1276 Soft</figcaption>
+					<figcaption>0486 Silke</figcaption>
 				</figure>
 			</section>
 			<section id="kajs" class="kajs">
 				<figure class="photo">
 					<picture>
-						<source type="image/jpeg" srcset="images/kajs/naturalblue.jpg"/>
+						<source type="image/jpeg" srcset="images/gangen/tidslos-01.jpg"/>
+						<img/>
+					</picture>
+					<figcaption>1024 Tidløs</figcaption>
+				</figure>
+				<figure class="photo" style="display:none">
+					<picture>
 						<source type="image/jpeg" srcset="images/kajs/lovsal-01.jpg"/>
 						<img/>
 					</picture>
@@ -73,14 +76,14 @@
 				</figure>
 			</section>
 			<section id="fars" class="fars">
-				<figure class="photo" >
+				<figure class="photo" style="display:none">
 					<picture>
 						<source type="image/jpeg" srcset="images/fars/desertpink-01.jpg"/>
 						<img/>
 					</picture>
 					<figcaption>12120 Desert Pink</figcaption>
 				</figure>
-				<figure class="photo" style="display:none">
+				<figure class="photo">
 					<picture>
 						<source type="image/webp" srcset="images/fars/transparentpink-01.webp"/>
 						<img/>
@@ -92,10 +95,9 @@
 				<figure class="photo">
 					<picture>
 						<source type="image/jpeg" srcset="images/lokum/kalk-02.jpg"/>
-						<source type="image/jpeg" srcset="images/lokum/space-01.jpg"/>
 						<img/>
 					</picture>
-					<figcaption>10678 Space</figcaption>
+					<figcaption>10341 Kalk</figcaption>
 				</figure>
 			</section>
 		</main>
