--- a/index.html
+++ b/index.html
@@ -46,17 +46,27 @@
 						<source type="image/png" srcset="images/allroom/nostalgi-01.png"/>
 						<img/>
 					</picture>	
-					<figcaption>9915 Morgendis</figcaption>
+					<figcaption>
+						<button>1928 Sommersne</button>
+						<button>10678 Space</button>
+						<button>7237 Nostalgi</button>
+					</figcaption>
 				</figure>
 			</section>
 			<section id="stuen" class="stuen">
 				<figure class="photo">
 					<picture>
 						<source type="image/jpeg" srcset="images/stuen/silke-01.jpg"/>
+						<img/>
+					</picture>
+					<picture>
 						<source type="image/jpeg" srcset="images/stuen/soft-01.jpg"/>
 						<img/>
 					</picture>
-					<figcaption>0486 Silke</figcaption>
+					<figcaption>
+						<button>0486 Silke</button>
+						<button>1276 Soft</button>
+					</figcaption>
 				</figure>
 			</section>
 			<section id="kajs" class="kajs">
@@ -65,30 +75,35 @@
 						<source type="image/jpeg" srcset="images/gangen/tidslos-01.jpg"/>
 						<img/>
 					</picture>
-					<figcaption>1024 Tidløs</figcaption>
-				</figure>
-				<figure class="photo" style="display:none">
 					<picture>
-						<source type="image/jpeg" srcset="images/kajs/lovsal-01.jpg"/>
+						<source type="image/jpeg" srcset="images/kajs/iconic-01.jpg"/>
 						<img/>
 					</picture>
-					<figcaption>8118 Løvsal</figcaption>
+					<figcaption>
+						<button>1024 Tidløs</button>
+						<button>8118 Løvsal</button>
+					</figcaption>
 				</figure>
 			</section>
 			<section id="fars" class="fars">
-				<figure class="photo" style="display:none">
-					<picture>
-						<source type="image/jpeg" srcset="images/fars/desertpink-01.jpg"/>
-						<img/>
-					</picture>
-					<figcaption>12120 Desert Pink</figcaption>
-				</figure>
 				<figure class="photo">
 					<picture>
 						<source type="image/webp" srcset="images/fars/transparentpink-01.webp"/>
 						<img/>
 					</picture>
-					<figcaption>20119 Transparent Pink</figcaption>
+					<picture>
+						<source type="image/webp" srcset="images/fars/rusticpink-01.jpg"/>
+						<img/>
+					</picture>
+					<picture>
+						<source type="image/jpeg" srcset="images/fars/desertpink-01.jpg"/>
+						<img/>
+					</picture>
+					<figcaption>
+						<button>20119 Transparent Pink</button>
+						<button>12806 Rustic Pink</button>
+						<button>12120 Desert Pink</button>
+					</figcaption>
 				</figure>
 			</section>
 			<section id="lokum" class="lokum">
