--- a/index.html
+++ b/index.html
@@ -46,26 +46,34 @@
 						<source type="image/png" srcset="images/allroom/nostalgi-01.png"/>
 						<img/>
 					</picture>	
+					<picture>
+						<source type="image/jpeg" srcset="images/allroom/sommersne-01.jpg"/>
+						<img/>
+					</picture>
+					<picture>
+						<source type="image/jpeg" srcset="images/allroom/space-02.jpg"/>
+						<img/>
+					</picture>
 					<figcaption>
+						<button>7237 Nostalgi</button>
 						<button>1928 Sommersne</button>
 						<button>10678 Space</button>
-						<button>7237 Nostalgi</button>
 					</figcaption>
 				</figure>
 			</section>
 			<section id="stuen" class="stuen">
 				<figure class="photo">
 					<picture>
-						<source type="image/jpeg" srcset="images/stuen/silke-01.jpg"/>
+						<source type="image/jpeg" srcset="images/stuen/soft-03.jpg"/>
 						<img/>
 					</picture>
 					<picture>
-						<source type="image/jpeg" srcset="images/stuen/soft-01.jpg"/>
+						<source type="image/jpeg" srcset="images/stuen/silke-01.jpg"/>
 						<img/>
 					</picture>
 					<figcaption>
-						<button>0486 Silke</button>
 						<button>1276 Soft</button>
+						<button>0486 Silke</button>
 					</figcaption>
 				</figure>
 			</section>
@@ -76,7 +84,7 @@
 						<img/>
 					</picture>
 					<picture>
-						<source type="image/jpeg" srcset="images/kajs/iconic-01.jpg"/>
+						<source type="image/jpeg" srcset="images/kajs/lovsal-01.jpg"/>
 						<img/>
 					</picture>
 					<figcaption>
@@ -92,7 +100,7 @@
 						<img/>
 					</picture>
 					<picture>
-						<source type="image/webp" srcset="images/fars/rusticpink-01.jpg"/>
+						<source type="image/webp" srcset="images/fars/rusticpink-01.webp"/>
 						<img/>
 					</picture>
 					<picture>
