--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
 						<source type="image/jpeg" srcset="images/gangen/letthet-01.jpg"/>
 						<img/>
 					</picture>
-					<figcaption>1624 Letthet</figcaption>
+					<figcaption>
+						<button>1624 Letthet</button>
+					</figcaption>
 				</figure>
 			</section>
 			<section id="allroom" class="allroom">
