--- a/index.html
+++ b/index.html
@@ -122,7 +122,9 @@
 						<source type="image/jpeg" srcset="images/lokum/kalk-02.jpg"/>
 						<img/>
 					</picture>
-					<figcaption>10341 Kalk</figcaption>
+					<figcaption>
+						<button>10341 Kalk</button>
+					</figcaption>
 				</figure>
 			</section>
 		</main>
