--- a/index.html
+++ b/index.html
@@ -49,17 +49,17 @@
 						<img/>
 					</picture>	
 					<picture>
-						<source type="image/jpeg" srcset="images/allroom/sommersne-01.jpg"/>
+						<source type="image/jpeg" srcset="images/allroom/hvitpoesi-01.jpg"/>
 						<img/>
 					</picture>
 					<picture>
-						<source type="image/jpeg" srcset="images/allroom/space-02.jpg"/>
+						<source type="image/jpeg" srcset="images/allroom/washedlinen-01.jpg"/>
 						<img/>
 					</picture>
 					<figcaption>
 						<button>7237 Nostalgi</button>
-						<button>1928 Sommersne</button>
-						<button>10678 Space</button>
+						<button>8394 Hvit Poesi</button>
+						<button>10679 Washed Linen</button>
 					</figcaption>
 				</figure>
 			</section>
