--- a/index.html
+++ b/index.html
@@ -82,16 +82,16 @@
 			<section id="kajs" class="kajs">
 				<figure class="photo">
 					<picture>
-						<source type="image/jpeg" srcset="images/gangen/tidslos-01.jpg"/>
+						<source type="image/webp" srcset="images/kajs/antikgra-01.webp"/>
 						<img/>
 					</picture>
 					<picture>
-						<source type="image/jpeg" srcset="images/kajs/lovsal-01.jpg"/>
+						<source type="image/jpeg" srcset="images/gangen/tidslos-01.jpg"/>
 						<img/>
 					</picture>
 					<figcaption>
+						<button>1973 Antikgrå</button>
 						<button>1024 Tidløs</button>
-						<button>8118 Løvsal</button>
 					</figcaption>
 				</figure>
 			</section>
