--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 						<img/>
 					</picture>	
 					<picture>
+						<source type="image/jpeg" srcset="images/allroom/contemporarywhite-01.jpg"/>
 						<source type="image/jpeg" srcset="images/allroom/hvitpoesi-01.jpg"/>
 						<img/>
 					</picture>
@@ -58,7 +59,7 @@
 					</picture>
 					<figcaption>
 						<button>7237 Nostalgi</button>
-						<button>8394 Hvit Poesi</button>
+						<button>12123 Contemporary White</button>
 						<button>10679 Washed Linen</button>
 					</figcaption>
 				</figure>
