--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
 			<section id="gangen" class="gangen">
 				<figure class="photo">
 					<picture>
-						<source type="image/jpeg" srcset="images/gangen/letthet-01.jpg"/>
+						<source type="image/jpeg" srcset="images/allroom/sommersne-01.jpg"/>
 						<img/>
 					</picture>
 					<figcaption>
-						<button>1624 Letthet</button>
+						<button>1928 Sommersne</button>
 					</figcaption>
 				</figure>
 			</section>
@@ -47,25 +47,28 @@
 					<picture>
 						<source type="image/png" srcset="images/allroom/nostalgi-01.png"/>
 						<img/>
-					</picture>	
+					</picture>
 					<picture>
-						<source type="image/jpeg" srcset="images/allroom/contemporarywhite-01.jpg"/>
-						<source type="image/jpeg" srcset="images/allroom/hvitpoesi-01.jpg"/>
+						<source type="image/jpeg" srcset="images/gangen/tidslos-01.jpg"/>
 						<img/>
 					</picture>
 					<picture>
-						<source type="image/jpeg" srcset="images/allroom/washedlinen-01.jpg"/>
+						<source type="image/webp" srcset="images/allroom/smoothwhite-03.webp"/>
 						<img/>
 					</picture>
 					<figcaption>
 						<button>7237 Nostalgi</button>
-						<button>12123 Contemporary White</button>
-						<button>10679 Washed Linen</button>
+						<button>1024 Tidløs</button>
+						<button>8470 Smooth White</button>
 					</figcaption>
 				</figure>
 			</section>
 			<section id="stuen" class="stuen">
 				<figure class="photo">
+					<picture>
+						<source type="image/jpeg" srcset="images/allroom/contemporarywhite-01.jpg"/>
+						<img/>
+					</picture>
 					<picture>
 						<source type="image/jpeg" srcset="images/stuen/soft-03.jpg"/>
 						<img/>
@@ -75,6 +78,7 @@
 						<img/>
 					</picture>
 					<figcaption>
+						<button>12123 Contemporary White</button>
 						<button>1276 Soft</button>
 						<button>0486 Silke</button>
 					</figcaption>
