--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 			<section id="gangen" class="gangen">
 				<figure class="photo">
 					<picture>
-						<source type="image/jpeg" srcset="images/allroom/sommersne-01.jpg"/>
+						<source type="image/jpeg" srcset="images/sommersne-01.jpg"/>
 						<img/>
 					</picture>
 					<figcaption>
@@ -45,41 +45,41 @@
 			<section id="allroom" class="allroom">
 				<figure class="photo">
 					<picture>
-						<source type="image/png" srcset="images/allroom/nostalgi-01.png"/>
+						<source type="image/png" srcset="images/nostalgi-01.png"/>
 						<img/>
 					</picture>
 					<picture>
-						<source type="image/jpeg" srcset="images/gangen/tidslos-01.jpg"/>
+						<source type="image/jpeg" srcset="images/tidslos-01.jpg"/>
 						<img/>
 					</picture>
 					<picture>
-						<source type="image/webp" srcset="images/allroom/smoothwhite-03.webp"/>
+						<source type="image/jpeg" srcset="images/washedlinen-01.jpg"/>
 						<img/>
 					</picture>
 					<figcaption>
 						<button>7237 Nostalgi</button>
 						<button>1024 Tidløs</button>
-						<button>8470 Smooth White</button>
+						<button>10679 Washed Linen</button>
 					</figcaption>
 				</figure>
 			</section>
 			<section id="stuen" class="stuen">
 				<figure class="photo">
 					<picture>
-						<source type="image/jpeg" srcset="images/allroom/contemporarywhite-01.jpg"/>
+						<source type="image/jpeg" srcset="images/contemporarywhite-01.jpg"/>
 						<img/>
 					</picture>
 					<picture>
-						<source type="image/jpeg" srcset="images/stuen/soft-03.jpg"/>
+						<source type="image/jpeg" srcset="images/modernbeige-01.jpg"/>
 						<img/>
 					</picture>
 					<picture>
-						<source type="image/jpeg" srcset="images/stuen/silke-01.jpg"/>
+						<source type="image/jpeg" srcset="images/silke-01.jpg"/>
 						<img/>
 					</picture>
 					<figcaption>
 						<button>12123 Contemporary White</button>
-						<button>1276 Soft</button>
+						<button>12076 Modern Beige</button>
 						<button>0486 Silke</button>
 					</figcaption>
 				</figure>
@@ -87,44 +87,44 @@
 			<section id="kajs" class="kajs">
 				<figure class="photo">
 					<picture>
-						<source type="image/webp" srcset="images/kajs/antikgra-01.webp"/>
+						<source type="image/jpeg" srcset="images/treasure-01.jpg"/>
 						<img/>
 					</picture>
 					<picture>
-						<source type="image/jpeg" srcset="images/gangen/tidslos-01.jpg"/>
+						<source type="image/jpeg" srcset="images/refresh-01.jpg"/>
 						<img/>
 					</picture>
 					<figcaption>
-						<button>1973 Antikgrå</button>
-						<button>1024 Tidløs</button>
+						<button>7628 Treasure</button>
+						<button>7629 Refresh</button>
 					</figcaption>
 				</figure>
 			</section>
 			<section id="fars" class="fars">
 				<figure class="photo">
 					<picture>
-						<source type="image/jpeg" srcset="images/fars/desertpink-01.jpg"/>
+						<source type="image/jpeg" srcset="images/modernbeige-01.jpg"/>
 						<img/>
 					</picture>
 					<picture>
-						<source type="image/webp" srcset="images/fars/transparentpink-01.webp"/>
+						<source type="image/jpeg" srcset="images/space-02.jpg"/>
 						<img/>
 					</picture>
 					<picture>
-						<source type="image/webp" srcset="images/fars/rusticpink-01.webp"/>
+						<source type="image/jpeg" srcset="images/silke-01.jpg"/>
 						<img/>
 					</picture>
 					<figcaption>
-						<button>12120 Desert Pink</button>
-						<button>20119 Transparent Pink</button>
-						<button>12806 Rustic Pink</button>
+						<button>12076 Modern Beige</button>
+						<button>10678 Space</button>
+						<button>0486 Silke</button>
 					</figcaption>
 				</figure>
 			</section>
 			<section id="lokum" class="lokum">
 				<figure class="photo">
 					<picture>
-						<source type="image/jpeg" srcset="images/lokum/kalk-02.jpg"/>
+						<source type="image/jpeg" srcset="images/kalk-02.jpg"/>
 						<img/>
 					</picture>
 					<figcaption>
