--- a/index.html
+++ b/index.html
@@ -91,12 +91,12 @@
 						<img/>
 					</picture>
 					<picture>
-						<source type="image/jpeg" srcset="images/refresh-01.jpg"/>
+						<source type="image/jpeg" srcset="images/lovsal-01.jpg"/>
 						<img/>
 					</picture>
 					<figcaption>
 						<button>7628 Treasure</button>
-						<button>7629 Refresh</button>
+						<button>8118 Løvsal</button>
 					</figcaption>
 				</figure>
 			</section>
