--- a/index.html
+++ b/index.html
@@ -49,17 +49,22 @@
 						<img/>
 					</picture>
 					<picture>
-						<source type="image/jpeg" srcset="images/tidslos-01.jpg"/>
+						<source type="image/webp" srcset="images/smoothwhite-03.webp"/>
 						<img/>
 					</picture>
 					<picture>
-						<source type="image/jpeg" srcset="images/washedlinen-01.jpg"/>
+						<source type="image/jpeg" srcset="images/naturalblue-01.jpg"/>
+						<img/>
+					</picture>
+					<picture>
+						<source type="image/webp" srcset="images/antikgra-01.webp"/>
 						<img/>
 					</picture>
 					<figcaption>
 						<button>7237 Nostalgi</button>
+						<button>8470 Smooth White</button>
 						<button>1024 Tidløs</button>
-						<button>10679 Washed Linen</button>
+						<button>1973 Antikkgrå</button>
 					</figcaption>
 				</figure>
 			</section>
