--- a/index.html
+++ b/index.html
@@ -49,22 +49,17 @@
 						<img/>
 					</picture>
 					<picture>
-						<source type="image/webp" srcset="images/smoothwhite-03.webp"/>
+						<source type="image/jpeg" srcset="images/tidslos-01.jpg"/>
 						<img/>
 					</picture>
 					<picture>
-						<source type="image/jpeg" srcset="images/naturalblue-01.jpg"/>
-						<img/>
-					</picture>
-					<picture>
-						<source type="image/webp" srcset="images/antikgra-01.webp"/>
+						<source type="image/jpeg" srcset="images/washedlinen-01.jpg"/>
 						<img/>
 					</picture>
 					<figcaption>
 						<button>7237 Nostalgi</button>
-						<button>8470 Smooth White</button>
 						<button>1024 Tidløs</button>
-						<button>1973 Antikkgrå</button>
+						<button>10679 Washed Linen</button>
 					</figcaption>
 				</figure>
 			</section>
@@ -99,9 +94,14 @@
 						<source type="image/jpeg" srcset="images/lovsal-01.jpg"/>
 						<img/>
 					</picture>
+					<picture>
+						<source type="image/jpeg" srcset="images/lovsal-02.jpg"/>
+						<img/>
+					</picture>
 					<figcaption>
 						<button>7628 Treasure</button>
 						<button>8118 Løvsal</button>
+						<button>12123 Contemporary White</button>
 					</figcaption>
 				</figure>
 			</section>
