--- a/index.html
+++ b/index.html
@@ -95,13 +95,13 @@
 						<img/>
 					</picture>
 					<picture>
-						<source type="image/jpeg" srcset="images/lovsal-02.jpg"/>
+						<source type="image/jpeg" srcset="images/hvitpoesi-01.jpg"/>
 						<img/>
 					</picture>
 					<figcaption>
 						<button>7628 Treasure</button>
 						<button>8118 Løvsal</button>
-						<button>12123 Contemporary White</button>
+						<button>8394 Hvit Poesi</button>
 					</figcaption>
 				</figure>
 			</section>
