--- a/index.html
+++ b/index.html
@@ -112,17 +112,17 @@
 						<img/>
 					</picture>
 					<picture>
-						<source type="image/jpeg" srcset="images/space-02.jpg"/>
+						<source type="image/jpeg" srcset="images/smoothwhite-04.jpg"/>
 						<img/>
 					</picture>
 					<picture>
-						<source type="image/jpeg" srcset="images/silke-01.jpg"/>
+						<source type="image/jpeg" srcset="images/tidlos-02.jpg"/>
 						<img/>
 					</picture>
 					<figcaption>
 						<button>12076 Modern Beige</button>
-						<button>10678 Space</button>
-						<button>0486 Silke</button>
+						<button>8470 Smooth White</button>
+						<button>1024 Tidløs</button>
 					</figcaption>
 				</figure>
 			</section>
