--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 			<section id="fars" class="fars">
 				<figure class="photo">
 					<picture>
-						<source type="image/jpeg" srcset="images/modernbeige-01.jpg"/>
+						<source type="image/jpeg" srcset="images/graskifer-01.jpg"/>
 						<img/>
 					</picture>
 					<picture>
@@ -120,7 +120,7 @@
 						<img/>
 					</picture>
 					<figcaption>
-						<button>12076 Modern Beige</button>
+						<button>1462 Grå Skifer</button>
 						<button>8470 Smooth White</button>
 						<button>1024 Tidløs</button>
 					</figcaption>
