--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 			<section id="fars" class="fars">
 				<figure class="photo">
 					<picture>
-						<source type="image/jpeg" srcset="images/graskifer-01.jpg"/>
+						<source type="image/webp" srcset="images/valmuefro-01.webp"/>
 						<img/>
 					</picture>
 					<picture>
@@ -116,13 +116,13 @@
 						<img/>
 					</picture>
 					<picture>
-						<source type="image/jpeg" srcset="images/tidlos-02.jpg"/>
+						<source type="image/jpeg" srcset="images/hvitpoesi-01.jpg"/>
 						<img/>
 					</picture>
 					<figcaption>
-						<button>1462 Grå Skifer</button>
+						<button>1877 Valmuefrø</button>
 						<button>8470 Smooth White</button>
-						<button>1024 Tidløs</button>
+						<button>8394 Hvit Poesi</button>
 					</figcaption>
 				</figure>
 			</section>
