--- a/index.html
+++ b/index.html
@@ -129,11 +129,11 @@
 			<section id="lokum" class="lokum">
 				<figure class="photo">
 					<picture>
-						<source type="image/jpeg" srcset="images/kalk-02.jpg"/>
+						<source type="image/jpeg" srcset="images/washedlinen-02.jpg"/>
 						<img/>
 					</picture>
 					<figcaption>
-						<button>10341 Kalk</button>
+						<button>10679 Washed Linen</button>
 					</figcaption>
 				</figure>
 			</section>
