--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 						<img/>
 					</picture>
 					<picture>
-						<source type="image/jpeg" srcset="images/washedlinen-01.jpg"/>
+						<source type="image/webp" srcset="images/washedlinen-03.webp"/>
 						<img/>
 					</picture>
 					<figcaption>
@@ -70,7 +70,7 @@
 						<img/>
 					</picture>
 					<picture>
-						<source type="image/jpeg" srcset="images/modernbeige-01.jpg"/>
+						<source type="image/jpeg" srcset="images/silhouette-01.jpg"/>
 						<img/>
 					</picture>
 					<picture>
@@ -79,7 +79,7 @@
 					</picture>
 					<figcaption>
 						<button>12123 Contemporary White</button>
-						<button>12076 Modern Beige</button>
+						<button>12126 Silhouette</button>
 						<button>0486 Silke</button>
 					</figcaption>
 				</figure>
@@ -129,11 +129,11 @@
 			<section id="lokum" class="lokum">
 				<figure class="photo">
 					<picture>
-						<source type="image/jpeg" srcset="images/washedlinen-02.jpg"/>
+						<source type="image/jpeg" srcset="images/kalk-02.jpg"/>
 						<img/>
 					</picture>
 					<figcaption>
-						<button>10679 Washed Linen</button>
+						<button>10341 Kalk</button>
 					</figcaption>
 				</figure>
 			</section>
