--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 						<img/>
 					</picture>
 					<picture>
-						<source type="image/jpeg" srcset="images/silhouette-01.jpg"/>
+						<source type="image/jpeg" srcset="images/humbleyellow-01.jpg"/>
 						<img/>
 					</picture>
 					<picture>
@@ -79,12 +79,33 @@
 					</picture>
 					<figcaption>
 						<button>12123 Contemporary White</button>
-						<button>12126 Silhouette</button>
+						<button>11173 Humble Yellow</button>
 						<button>0486 Silke</button>
 					</figcaption>
 				</figure>
 			</section>
 			<section id="kajs" class="kajs">
+				<figure class="photo">
+					<picture>
+						<source type="image/jpeg" srcset="images/lauerbaer-01.jpg"/>
+						<img/>
+					</picture>
+					<picture>
+						<source type="image/jpeg" srcset="images/krydderurt-02.jpg"/>
+						<img/>
+					</picture>
+					<picture>
+						<source type="image/jpeg" srcset="images/sommersne-01.jpg"/>
+						<img/>
+					</picture>
+					<figcaption>
+						<button>8302 Laurbær</button>
+						<button>8222 Krydderurt</button>
+						<button>1928 Sommersne</button>
+					</figcaption>
+				</figure>
+			</section>
+			<section id="kajs-alt" class="kajs-alt">
 				<figure class="photo">
 					<picture>
 						<source type="image/jpeg" srcset="images/treasure-01.jpg"/>
