--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 						<img/>
 					</picture>
 					<picture>
-						<source type="image/jpeg" srcset="images/krydderurt-02.jpg"/>
+						<source type="image/jpeg" srcset="images/hvitlyng-01.jpg"/>
 						<img/>
 					</picture>
 					<picture>
@@ -100,12 +100,12 @@
 					</picture>
 					<figcaption>
 						<button>8302 Laurbær</button>
-						<button>8222 Krydderurt</button>
+						<button>8303 Hvitlyng</button>
 						<button>1928 Sommersne</button>
 					</figcaption>
 				</figure>
 			</section>
-			<section id="kajs-alt" class="kajs-alt">
+			<section id="kajs-alt" class="kajs-alt" style="display:none;">
 				<figure class="photo">
 					<picture>
 						<source type="image/jpeg" srcset="images/treasure-01.jpg"/>
