--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 						<img/>
 					</picture>
 					<picture>
-						<source type="image/jpeg" srcset="images/humbleyellow-01.jpg"/>
+						<source type="image/jpeg" srcset="images/silhouette-01.jpg"/>
 						<img/>
 					</picture>
 					<picture>
@@ -79,7 +79,7 @@
 					</picture>
 					<figcaption>
 						<button>12123 Contemporary White</button>
-						<button>11173 Humble Yellow</button>
+						<button>12176 Silhouette</button>
 						<button>0486 Silke</button>
 					</figcaption>
 				</figure>
