--- a/index.html
+++ b/index.html
@@ -87,27 +87,6 @@
 			<section id="kajs" class="kajs">
 				<figure class="photo">
 					<picture>
-						<source type="image/jpeg" srcset="images/treasure-01.jpg"/>
-						<img/>
-					</picture>
-					<picture>
-						<source type="image/jpeg" srcset="images/lovsal-01.jpg"/>
-						<img/>
-					</picture>
-					<picture>
-						<source type="image/jpeg" srcset="images/hvitpoesi-01.jpg"/>
-						<img/>
-					</picture>
-					<figcaption>
-						<button>7628 Treasure</button>
-						<button>8118 Løvsal</button>
-						<button>8394 Hvit Poesi</button>
-					</figcaption>
-				</figure>
-			</section>
-			<section id="kajs-alt" class="kajs-alt">
-				<figure class="photo">
-					<picture>
 						<source type="image/jpeg" srcset="images/lauerbaer-01.jpg"/>
 						<img/>
 					</picture>
@@ -123,6 +102,27 @@
 						<button>8302 Laurbær</button>
 						<button>8303 Hvitlyng</button>
 						<button>1928 Sommersne</button>
+					</figcaption>
+				</figure>
+			</section>
+			<section id="kajs-alt" class="kajs-alt" style="display:none;">
+				<figure class="photo">
+					<picture>
+						<source type="image/jpeg" srcset="images/treasure-01.jpg"/>
+						<img/>
+					</picture>
+					<picture>
+						<source type="image/jpeg" srcset="images/lovsal-01.jpg"/>
+						<img/>
+					</picture>
+					<picture>
+						<source type="image/jpeg" srcset="images/hvitpoesi-01.jpg"/>
+						<img/>
+					</picture>
+					<figcaption>
+						<button>7628 Treasure</button>
+						<button>8118 Løvsal</button>
+						<button>8394 Hvit Poesi</button>
 					</figcaption>
 				</figure>
 			</section>
