--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
 				</figure>
 			</section>
 			<section id="kajs" class="kajs">
+				<button class="toggle" data-show="kajs-alt" data-hide="kajs">ALT</button>
 				<figure class="photo">
 					<picture>
 						<source type="image/jpeg" srcset="images/lauerbaer-01.jpg"/>
@@ -105,7 +106,8 @@
 					</figcaption>
 				</figure>
 			</section>
-			<section id="kajs-alt" class="kajs-alt" style="display:none;">
+			<section id="kajs-alt" class="kajs-alt">
+				<button class="toggle" data-show="kajs" data-hide="kajs-alt">ALT</button>
 				<figure class="photo">
 					<picture>
 						<source type="image/jpeg" srcset="images/treasure-01.jpg"/>
