--- a/index.html
+++ b/index.html
@@ -107,7 +107,29 @@
 				</figure>
 			</section>
 			<section id="kajs-alt" class="kajs-alt">
-				<button class="toggle" data-show="kajs" data-hide="kajs-alt">ALT</button>
+				<button class="toggle" data-show="kajs-alt2" data-hide="kajs-alt">ALT</button>
+				<figure class="photo">
+					<picture>
+						<source type="image/jpeg" srcset="images/dewygreen-02.jpg"/>
+						<img/>
+					</picture>
+					<picture>
+						<source type="image/jpeg" srcset="images/palelinden-02.jpg"/>
+						<img/>
+					</picture>
+					<picture>
+						<source type="image/jpeg" srcset="images/sommersne-01.jpg"/>
+						<img/>
+					</picture>
+					<figcaption>
+						<button>8426 Dewy Green</button>
+						<button>8281 Pale Linden</button>
+						<button>1928 Sommersne</button>
+					</figcaption>
+				</figure>
+			</section>
+			<section id="kajs-alt2" class="kajs-alt2">
+				<button class="toggle" data-show="kajs" data-hide="kajs-alt2">ALT</button>
 				<figure class="photo">
 					<picture>
 						<source type="image/jpeg" srcset="images/treasure-01.jpg"/>
