--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 				</figure>
 			</section>
 			<section id="kajs" class="kajs">
-				<button class="toggle" data-show="kajs-alt" data-hide="kajs">ALT</button>
+				<button class="toggle" data-show="kajs-alt1" data-hide="kajs">ALT</button>
 				<figure class="photo">
 					<picture>
 						<source type="image/jpeg" srcset="images/lauerbaer-01.jpg"/>
@@ -106,8 +106,30 @@
 					</figcaption>
 				</figure>
 			</section>
-			<section id="kajs-alt" class="kajs-alt">
-				<button class="toggle" data-show="kajs-alt2" data-hide="kajs-alt">ALT</button>
+			<section id="kajs-alt1" class="kajs-alt1">
+				<button class="toggle" data-show="kajs-alt2" data-hide="kajs-alt1">ALT</button>
+				<figure class="photo">
+					<picture>
+						<source type="image/jpeg" srcset="images/lovsal-01.jpg"/>
+						<img/>
+					</picture>
+					<picture>
+						<source type="image/jpeg" srcset="images/treasure-01.jpg"/>
+						<img/>
+					</picture>
+					<picture>
+						<source type="image/jpeg" srcset="images/hvitpepper-02.jpg"/>
+						<img/>
+					</picture>
+					<figcaption>
+						<button>8118 Løvsal</button>
+						<button>7628 Treasure</button>
+						<button>8282 Hvit Pepper</button>
+					</figcaption>
+				</figure>
+			</section>
+			<section id="kajs-alt2" class="kajs-alt2">
+				<button class="toggle" data-show="kajs-alt3" data-hide="kajs-alt2">ALT</button>
 				<figure class="photo">
 					<picture>
 						<source type="image/jpeg" srcset="images/dewygreen-02.jpg"/>
@@ -125,11 +147,11 @@
 						<button>8426 Dewy Green</button>
 						<button>8281 Pale Linden</button>
 						<button>1928 Sommersne</button>
-					</figcaption>
+					</figcaption>	
 				</figure>
 			</section>
-			<section id="kajs-alt2" class="kajs-alt2">
-				<button class="toggle" data-show="kajs" data-hide="kajs-alt2">ALT</button>
+			<section id="kajs-alt3" class="kajs-alt3">
+				<button class="toggle" data-show="kajs" data-hide="kajs-alt3">ALT</button>
 				<figure class="photo">
 					<picture>
 						<source type="image/jpeg" srcset="images/treasure-01.jpg"/>
