--- a/index.html
+++ b/index.html
@@ -91,17 +91,17 @@
 						<img/>
 					</picture>
 					<picture>
-						<source type="image/jpeg" srcset="images/treasure-01.jpg"/>
+						<source type="image/jpeg" srcset="images/cityscape-01.jpg"/>
 						<img/>
 					</picture>
 					<picture>
-						<source type="image/jpeg" srcset="images/hvitpoesi-01.jpg"/>
+						<source type="image/jpeg" srcset="images/hvitlyng-01.jpg"/>
 						<img/>
 					</picture>
 					<figcaption>
 						<button>8118 Løvsal</button>
-						<button>7628 Treasure</button>
-						<button>8394 Hvit Poesi</button>
+						<button>6379 Cityscape</button>
+						<button>8303 Hvitlyng</button>
 					</figcaption>
 				</figure>
 			</section>
@@ -112,7 +112,7 @@
 						<img/>
 					</picture>
 					<picture>
-						<source type="image/jpeg" srcset="images/smoothwhite-04.jpg"/>
+						<source type="image/jpeg" srcset="images/smoothwhite-05.jpg"/>
 						<img/>
 					</picture>
 					<picture>
